--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "express": "^4.18.1",
+    "firebase": "^9.7.0",
+    "firebase-react-hooks": "^0.8.0",
+    "gun": "^0.2020.1237",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
